src/components/button/button.module.scss
@import '../../themes/global';
@import '../../themes/colors';
@import '../../themes/margins-paddings';

:global(.dark) {
  .button-primary {
    background-color: $dark-2;
    color: $gray-100;
  }

  .button-primary-desktop:hover {
    background-color: $dark-8;
  }

  .button-rounded {
    color: $gray-100;
  }

  .button-rounded:hover {
    color: $gray-100;
  }

  .button-default {
    color: $gray-100;
    background-color: $dark-2;
    border-color: $gray-200;
  }
  
  .button-default-desktop:hover {
    color: $gray-100;
    background-color: $dark-8;
    border-color: $gray-200;
  }

  .button-secondary {
    color: $gray-100;
    background-color: $dark-2;
  }
  
  .button-secondary-desktop:hover {
    background-color: $dark-8;
  
    & .button-children {
      color: $gray-100;
    }
  }

  .button-outline {
    color: $gray-100;
    background-color: transparent;
    border-color: $gray-200;
    border-style: solid;
  }
  
  .button-outline-desktop:hover {
    background-color: $dark-8;
    color: $gray-100;
    border-color: $gray-300;
  }
  
  .button-dashed {
    border-width: 1px;
    color: $gray-500;
    background-color: transparent;
    border-color: $gray-200;
    border-style: dashed;
  }
  
  .button-dashed-desktop:hover {
    color: $gray-100;
    border-color: $gray-600;
  }
  
  .button-link {
    background-color: transparent;
    color: $gray-200;
  }
  
  .button-link-desktop:hover {
    background-color: $brand-100;
  }
  
  .button-text {
    color: $gray-100;
    background-color: transparent;
  }
  
  .button-text-desktop:hover {
    background-color: $dark-8;
  }
}

.root {
  position: relative;
  height: fit-content;
}

.root-block {
  width: 100%;
}

.button {
  position: relative;
  display: inline-flex;
  font-family: inherit;
  padding: $mp-2 $mp-6;
  align-items: center;
  text-align: center;
  border-width: 1px;
  border-style: solid;
  border-color: transparent;
  border-radius: $rounded-base;
  -webkit-border-radius: $rounded-base;
  -moz-border-radius: $rounded-base;
  -khtml-border-radius: $rounded-base;
  cursor: pointer;
  color: inherit;
  -webkit-tap-highlight-color: transparent;
  user-select: none;
  text-transform: capitalize;
  font-size: $font-size-sm;
  font-weight: $font-weight-bold;
}

.button-ripple {
  display: flex;
  pointer-events: auto;
  justify-content: center;
  border-radius: $rounded-base;
  -webkit-border-radius: $rounded-base;
  -moz-border-radius: $rounded-base;
  -khtml-border-radius: $rounded-base;
}

.button-ripple-rounded {
  border-radius: $rounded-full;
  -webkit-border-radius: $rounded-full;
  -moz-border-radius: $rounded-full;
  -khtml-border-radius: $rounded-full;
}

.button-children {
  display: flex;
  flex-direction: row;
  white-space: nowrap;
  align-items: center;
  width: inherit;
}

.button-desktop:focus {
  outline: 2px solid transparent;
  outline-offset: 2px;
}

.button-w-full {
  display: flex;
  justify-content: center;
  align-items: center;
  text-align: center;
  width: 100%;
}

.button:disabled {
  pointer-events: none;
  opacity: 0.75;
  cursor: not-allowed;
}

/*
  Button sizes
*/

.button-tiny {
  padding: $mp-4 $mp-4;
  line-height: $font-line-height-sm;
}
.button-small {
  padding: $mp-5 $mp-5;
  line-height: $font-line-height-sm;
}
.button-medium {
  padding: $mp-7 $mp-7;
  line-height: $font-line-height-sm;
}
.button-large {
  padding: $mp-10 $mp-10;
  line-height: $font-line-height-sm;
}
.button-xlarge {
  padding: $mp-10 $mp-10;
  line-height: $font-line-height-base;
}
.button-full {
  width: 100%;
  height: 100%;
}

.button-tiny-with-children {
  padding: $mp-3 $mp-5;
  font-size: $font-size-sm;
  line-height: $font-line-height-sm;
}
.button-small-with-children {
  padding: $mp-4 $mp-6;
  font-size: $font-size-sm;
  line-height: $font-line-height-sm;
}
.button-medium-with-children {
  padding: $mp-4 $mp-7;
  font-size: $font-size-sm;
  line-height: $font-line-height-sm;
}
.button-large-with-children {
  padding: $mp-4 $mp-8;
  font-size: $font-size-sm;
  line-height: $font-line-height-sm;
}
.button-xlarge-with-children {
  padding: $mp-5 $mp-8;
  font-size: $font-size-base;
  line-height: $font-line-height-base;
}
.button-full-with-children {
  width: 100%;
  height: 100%;
}

/*
  Button varients
*/
.button-primary {
  background-color: $brand-500;
  color: $gray-100;
}

.button-rounded {
  border-radius: $rounded-full;
  color: $gray-900;
}

.button-rounded:hover {
  background-color: $gray-200;
}

.button-primary-desktop:hover {
  background-color: $brand-600;
}

.button-default {
  color: $gray-500;
  background-color: $gray-100;
  border-color: $gray-200;
}

.button-default-desktop:hover {
  color: $gray-500;
  background-color: $gray-100;
  border-color: $gray-200;
}

.dark .button-default {
  text-shadow: $shadow-1;
}

.button-secondary {
  color: $gray-100;
  background-color: $gray-600;
}

.button-secondary-desktop:hover {
  background-color: $gray-500;

  & .button-children {
    color: $gray-900;
  }
}

.dark .button-secondary {
  text-shadow: $shadow-1;
}

.button-outline {
  border-width: 1px;
  color: $gray-900;
  background-color: transparent;
  border-color: $gray-900;
  border-style: solid;
}

.button-outline-desktop:hover {
  background-color: white;
  color: $gray-500;
  border-color: $gray-500;
}

.button-dashed {
  border-width: 1px;
  color: $gray-800;
  background-color: transparent;
  border-color: $gray-800;
  border-style: dashed;
}

.button-dashed-desktop:hover {
  color: $gray-500;
  border-color: $gray-500;
}

.button-link {
  background-color: transparent;
  color: $brand-600;
}

.button-link-desktop:hover {
  background-color: $brand-800;
}

.button-text {
  color: $gray-900;
  background-color: transparent;
}

.button-text-desktop:hover {
  color: $gray-500;
}

.button-danger {
  border-color: $red-500;
  color: $red-500;
}

.dark .button-danger {
  text-shadow: $shadow-1;
}

.button-primary.button-danger {
  background-color: $red-500;
  color: white;
}

.button-primary-desktop.button-danger:hover {
  background-color: $red-600;
  border-color: $red-600;
}

.button-default.button-danger,
.button-secondary.button-danger,
.button-outline.button-danger,
.button-dashed.button-danger,
.button-link.button-danger,
.button-text.button-danger {
  & :hover {
    background-color: $red-600;
    color: white;
    border-color: $red-600;
  }
}
/* {
  @apply hover:bg-red-600 hover:text-white hover:border-red-600;
} */

/* 
  Animation for icon
*/
.button-anim-spin {
  stroke: currentColor;
  animation-name: spin;
  animation-duration: 1500ms;
  animation-iteration-count: infinite;
  animation-timing-function: linear;
  /* transform: rotate(3deg); */
  /* transform: rotate(0.3rad);/ */
  /* transform: rotate(3grad); */
  /* transform: rotate(.03turn);  */
  transform-origin: center center;
}

@keyframes spin {
  from {
    transform: rotate(0deg);
  }
  to {
    transform: rotate(360deg);
  }
}

.button-loader-center {
  position: absolute;
  top: 50%;
  left: 50%;
  right: 50%;
  bottom: 50%;
  transform: translate(-50%, -50%);
  margin: auto 0;
  width: inherit;
  height: inherit;
}

.button-text-align-left {
  justify-content: flex-start;
}

.button-text-align-right {
  justify-content: flex-end;
}

.button-text-align-center {
  width: inherit;
}

.icon-container {
  display: flex;
  justify-content: center;
}

.loading {
  display: flex;
  flex-direction: row;
  justify-content: center;
  width: 100%;
  min-height: 21px;
}

.left-icon-space {
  margin-right: $mp-2;
}

.right-icon-space {
  margin-left: $mp-2;
}

.floating-label-container {
  position: absolute;
  width: max-content;
  background-color: $brand-900;
  color: $brand-100;
  border-radius: $rounded-full;
  padding: $mp-4;
  word-break: keep-all;
  font-size: 8pt;
  font-weight: $font-weight-bold;
  pointer-events: none;
  z-index: 1000;
}

.label-appear {
  opacity: 0;
  transition-duration: 75ms;
  transition-timing-function: $transition-standard-easing;
}
.label-appear-active {
  opacity: 0;
  transition-duration: 75ms;
  transition-delay: 100ms;
  transition-timing-function: $transition-standard-easing;
}
.label-appear-done {
  opacity: 0;
}
.label-enter {
  opacity: 0;
  transition-duration: 75ms;
  transition-timing-function: $transition-standard-easing;
}
.label-enter-active {
  opacity: 1;
  transition-duration: 75ms;
  transition-timing-function: $transition-standard-easing;
}
.label-enter-done {
  opacity: 1;
}
.label-exit {
  opacity: 1;
  transition-duration: 150ms;
  transition-timing-function: $transition-standard-easing;
}
.label-exit-active {
  opacity: 0;
  transition-duration: 150ms;
  transition-timing-function: $transition-standard-easing;
}
.label-exit-done {
  opacity: 0;
}

